fix heading/video overlapping header bug

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-flow: row nowrap;
+  z-index: 12;
 }
 
 header {
@@ -61,6 +62,22 @@ header a:hover {
 header h1 {
   margin: 0.5em;
 }
+
+/* Scrollbar */
+*::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #101010;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #424242;
+  border: 2px solid black;
+}
+
 
 /* rather make a new div and do it here div h2 */
 .welcome { margin: 12em 4em 3.5em; }
